--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://eoakpinarr.github.io/sidebar/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
